# i3-tree-viz

./: Cargo.toml
src/: main.rs  tree.rs
