[package]
name = "i3-tree-dot"
version = "0.1.0"
authors = ["Sam Stokes <me@samstokes.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
daggy = ""
env_logger = ""
eyre = ""
log = ""
petgraph = ""
serde = { version = "", features = ["derive"] }
serde_json = ""
